Added wiki and fixed some configs paths